# nemo

./: .gitignore  icon.svg.import  project.godot  readme.md
gdextension/: CMakeLists.txt
gdextension/src/: input_manager.hpp  register_types.cpp  utils.hpp
scenes/: main.tscn  main.tscn8953565241.tmp
